--- a/glossari_privacy_policy.html
+++ b/glossari_privacy_policy.html
@@ -16,6 +16,6 @@
     <h2>Data Sharing</h2>
     <p>Not gonna share your data with third parties. Just happy if you like my app :)</p>
     <h2>Contact</h2>
-    <p>If you have questions, contact us at the email shown on Play Store.</p>
+    <p>If you have questions, contact me at the email shown on Play Store.</p>
 </body>
 </html>
